--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,6 +21,7 @@ initial_window_height 31c
 window_padding_width 2
 placement_strategy center
 hide_window_decorations no
+confirm_os_window_close 0
 
 # Bell
 enable_audio_bell no
