Modified hyprland config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -235,6 +235,7 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod, E, exec, $file_manager
 bind = $mainMod, B, exec, $web_browser
 bind = $mainMod, space, exec, $menu
+bind = ALT, space, exec, $menu
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
