--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,44 +1,28 @@
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hypr.land/Configuring/
-
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-
 ################
 ### MONITORS ###
 ################
 
-# See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor = DP-1, 1920x1080@71, 0x0, 1
+monitor = DVI-D-1, 1920x1080, 1920x0, 1
 
 ###################
 ### MY PROGRAMS ###
 ###################
 
-# See https://wiki.hypr.land/Configuring/Keywords/
-
-# Set programs that you use
 $terminal = kitty
 $file_manager = thunar
 $web_browser = zen-browser
-$menu = wofi --show drun
+$launcher = pkill wofi || wofi --allow-images --show run #--gtk-dark
+$launcher_drun = $launcher --show drun
 
 #################
 ### AUTOSTART ###
 #################
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet
 exec-once = waybar
 exec-once = hyprpaper
+exec-once = udiskie
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -49,6 +33,7 @@ exec-once = hyprpaper
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+env = XDG_DATA_DIRS,/usr/local/share:/usr/share:/var/lib/flatpak/exports/share/applications
 
 ###################
 ### PERMISSIONS ###
@@ -76,7 +61,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
@@ -118,6 +103,12 @@ decoration {
         vibrancy = 0.1696
     }
 }
+
+# Blur notifications
+#layerrule = blur, notifications
+
+# But don't blur completely transparent parts
+#layerrule = ignorezero, notifications
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
@@ -164,7 +155,7 @@ animations {
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    pseudotile = true # Master switch for pseudotiling. Enabling is bound to main_mod + P in the keybinds section below
     preserve_split = true # You probably want this
 }
 
@@ -175,8 +166,8 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0
+    disable_hyprland_logo = true
 }
 
 
@@ -196,10 +187,12 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.5 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0
+
+    accel_profile = flat
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -218,93 +211,135 @@ device {
 ### KEYBINDINGS ###
 ###################
 
-# See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+# https://wiki.hypr.land/Configuring/Keywords/
+$main_mod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT CONTROL, escape, exit,
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, M, togglesplit, # dwindle
+# https://wiki.hypr.land/Configuring/Binds/
 
-bind = $mainMod SHIFT CONTROL ALT, R, exec, killall -SIGUSR2 waybar
+# Window binds
+bind = $main_mod, Q, killactive,
+bind = $main_mod SHIFT CONTROL ALT, escape, exit,
+bind = $main_mod, V, togglefloating,
+bind = $main_mod, P, pseudo, # dwindle
+bind = $main_mod, M, togglesplit, # dwindle
+
+bind = $main_mod SHIFT, V, pin,
+
+bind = $main_mod SHIFT CONTROL ALT, R, exec, killall -SIGUSR2 waybar
 
 # Application binds
-bind = $mainMod, return, exec, $terminal
-bind = $mainMod, E, exec, $file_manager
-bind = $mainMod, B, exec, $web_browser
-bind = $mainMod, space, exec, $menu
-bind = ALT, space, exec, $menu
+bind = $main_mod, return, exec, $terminal
+bind = $main_mod, E, exec, $file_manager
+bind = $main_mod, B, exec, $web_browser
+bind = $main_mod, space, exec, $launcher_drun
+bind = ALT, space, exec, $launcher
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, J, movefocus, d
+# Screenshot binds
+bind = , print, exec, hyprshot -m output -m active
+bind = $main_mod, print, exec, hyprshot -m window
+bind = $main_mod SHIFT, print, exec, hyprshot -m window -m active
+bind = $main_mod CONTROL, print, exec, hyprshot -m region
 
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+# Move focus with main_mod + arrow keys
+bind = $main_mod, H, movefocus, l
+bind = $main_mod, L, movefocus, r
+bind = $main_mod, K, movefocus, u
+bind = $main_mod, J, movefocus, d
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+# Switch workspaces with main_mod + [0-9]
+bind = $main_mod, 1, workspace, 1
+bind = $main_mod, 2, workspace, 2
+bind = $main_mod, 3, workspace, 3
+bind = $main_mod, 4, workspace, 4
+bind = $main_mod, 5, workspace, 5
+bind = $main_mod, 6, workspace, 6
+bind = $main_mod, 7, workspace, 7
+bind = $main_mod, 8, workspace, 8
+bind = $main_mod, 9, workspace, 9
+bind = $main_mod, 0, workspace, 10
+
+# Move active window to a workspace with main_mod + SHIFT + [0-9]
+bind = $main_mod SHIFT, 1, movetoworkspace, 1
+bind = $main_mod SHIFT, 2, movetoworkspace, 2
+bind = $main_mod SHIFT, 3, movetoworkspace, 3
+bind = $main_mod SHIFT, 4, movetoworkspace, 4
+bind = $main_mod SHIFT, 5, movetoworkspace, 5
+bind = $main_mod SHIFT, 6, movetoworkspace, 6
+bind = $main_mod SHIFT, 7, movetoworkspace, 7
+bind = $main_mod SHIFT, 8, movetoworkspace, 8
+bind = $main_mod SHIFT, 9, movetoworkspace, 9
+bind = $main_mod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $main_mod, S, togglespecialworkspace, magic
+bind = $main_mod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+# Scroll through existing workspaces with main_mod + scroll
+bind = $main_mod, mouse_down, workspace, e+1
+bind = $main_mod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+# Move/resize windows with main_mod + LMB/RMB and dragging
+bindm = $main_mod, mouse:272, movewindow
+bindm = $main_mod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+# Volume keys
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 1%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
-# Requires playerctl
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 1%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 1%-
+
+bindl = CONTROL, KP_Divide, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+# Media keys
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
 
-# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
-# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
+###############
+### WINDOWS ###
+###############
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+# https://wiki.hypr.land/Configuring/Window-Rules/
+# https://wiki.hypr.land/Configuring/Workspace-Rules/
 
-# Ignore maximize requests from apps. You'll probably like this.
+# Ignore maximize requests from apps
 windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
+
+# Float popup Steam windows
+windowrule = float, class:steam, title:negative:Steam
+
+# Fix Zen PiP
+windowrule = float, pin, size 854 480, class:zen, title:Picture-in-Picture
+
+# Float Pavucontrol
+windowrule = float, size 500 400, class:org.pulseaudio.pavucontrol
+
+# Tile main Godot Engine windows
+windowrule = tile, initialClass:Godot, initialTitle:Godot
+
+# Float Thunar file operation window
+windowrule = float, class:thunar, title:File Operation Window
+
+##################
+### WORKSPACES ###
+##################
+
+workspace = 1, monitor:DP-1
+workspace = 2, monitor:DP-1
+workspace = 3, monitor:DP-1
+workspace = 4, monitor:DP-1
+workspace = 5, monitor:DP-1
+
+workspace = 6, monitor:DVI-D-1
+workspace = 7, monitor:DVI-D-1
+workspace = 8, monitor:DVI-D-1
+workspace = 9, monitor:DVI-D-1
+workspace = 10, monitor:DVI-D-1
