--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -22,6 +22,7 @@ window_padding_width 2
 placement_strategy center
 hide_window_decorations no
 confirm_os_window_close 0
+background_opacity 0.5
 
 # Bell
 enable_audio_bell no
