Changed mako font

--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -18,6 +18,6 @@ text-color=#FFFFFFFF
 progress-color=over #5588AAFF
 
 # Visual
-font=JetBrainsMono Nerd Font Mono Regular 13
+font=JetBrainsMono Nerd Font Regular 13
 
 border-radius=10
