Added a script that toggles microphone and send notification

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -2,8 +2,11 @@
 ### MONITORS ###
 ################
 
-monitor = DP-1, 1920x1080@71, 0x0, 1
-monitor = DVI-D-1, 1920x1080, 1920x0, 1
+$monitor1 = DP-1
+$monitor2 = DVI-D-1
+
+monitor = $monitor1, 1920x1080@71, 0x0, 1
+monitor = $monitor2, 1920x1080, 1920x0, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -222,6 +225,7 @@ bind = $main_mod SHIFT CONTROL ALT, escape, exit,
 bind = $main_mod, V, togglefloating,
 bind = $main_mod, P, pseudo, # dwindle
 bind = $main_mod, M, togglesplit, # dwindle
+bind = $main_mod, F, fullscreen
 
 bind = $main_mod SHIFT, V, pin,
 
@@ -291,7 +295,7 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 1%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 1%-
 
-bindl = CONTROL, KP_Divide, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindl = CONTROL, KP_Divide, exec, $HOME/scripts/audio/toggle-mic-with-notification
 
 # Media keys
 bindl = , XF86AudioNext, exec, playerctl next
@@ -332,14 +336,14 @@ windowrule = float, class:thunar, title:File Operation Window
 ### WORKSPACES ###
 ##################
 
-workspace = 1, monitor:DP-1
-workspace = 2, monitor:DP-1
-workspace = 3, monitor:DP-1
-workspace = 4, monitor:DP-1
-workspace = 5, monitor:DP-1
+workspace = 1, monitor:$monitor1
+workspace = 2, monitor:$monitor1
+workspace = 3, monitor:$monitor1
+workspace = 4, monitor:$monitor1
+workspace = 5, monitor:$monitor1
 
-workspace = 6, monitor:DVI-D-1
-workspace = 7, monitor:DVI-D-1
-workspace = 8, monitor:DVI-D-1
-workspace = 9, monitor:DVI-D-1
-workspace = 10, monitor:DVI-D-1
+workspace = 6, monitor:$monitor2
+workspace = 7, monitor:$monitor2
+workspace = 8, monitor:$monitor2
+workspace = 9, monitor:$monitor2
+workspace = 10, monitor:$monitor2
