Added the catppuccin mocha mauve theme to mako and hyprland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,3 +1,5 @@
+source=~/.config/hypr/colors.conf
+
 ################
 ### MONITORS ###
 ################
@@ -15,8 +17,9 @@ monitor = $monitor2, 1920x1080, 1920x0, 1
 $terminal = kitty
 $file_manager = thunar
 $web_browser = zen-browser
-$launcher = pkill wofi || wofi --allow-images --show run #--gtk-dark
-$launcher_drun = $launcher --show drun
+
+$launcher = pkill fuzzel || fuzzel
+$launcher2 = pkill wofi || wofi --allow-images --show drun
 
 #################
 ### AUTOSTART ###
@@ -69,7 +72,7 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba($pink_alphaee) rgba($mauve_alphaee) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -235,8 +238,8 @@ bind = $main_mod SHIFT CONTROL ALT, R, exec, killall -SIGUSR2 waybar
 bind = $main_mod, return, exec, $terminal
 bind = $main_mod, E, exec, $file_manager
 bind = $main_mod, B, exec, $web_browser
-bind = $main_mod, space, exec, $launcher_drun
-bind = ALT, space, exec, $launcher
+bind = $main_mod, space, exec, $launcher
+bind = ALT, space, exec, $launcher2
 
 # Screenshot binds
 bind = , print, exec, hyprshot -m output -m active
