Modified hyprland config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -72,7 +72,7 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba($pink_alphaee) rgba($mauve_alphaee) 45deg
+    col.active_border = rgba($mauve_alphaee)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -334,6 +334,8 @@ windowrule = tile, initialClass:Godot, initialTitle:Godot
 
 # Float Thunar file operation window
 windowrule = float, class:thunar, title:File Operation Window
+
+windowrule = float, noblur, class:cz.upce.fei.App.App
 
 ##################
 ### WORKSPACES ###
