Extracted the binds to a separate configuration file

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-source=~/.config/hypr/colors.conf
+source = ~/.config/hypr/colors.conf
 
 ################
 ### MONITORS ###
@@ -217,95 +217,7 @@ device {
 ### KEYBINDINGS ###
 ###################
 
-# https://wiki.hypr.land/Configuring/Keywords/
-$main_mod = SUPER # Sets "Windows" key as main modifier
-
-# https://wiki.hypr.land/Configuring/Binds/
-
-# Window binds
-bind = $main_mod, Q, killactive,
-bind = $main_mod SHIFT CONTROL ALT, escape, exit,
-bind = $main_mod, V, togglefloating,
-bind = $main_mod, P, pseudo, # dwindle
-bind = $main_mod, M, togglesplit, # dwindle
-bind = $main_mod, F, fullscreen
-
-bind = $main_mod SHIFT, V, pin,
-
-bind = $main_mod SHIFT CONTROL ALT, R, exec, killall -SIGUSR2 waybar
-
-# Application binds
-bind = $main_mod, return, exec, $terminal
-bind = $main_mod, E, exec, $file_manager
-bind = $main_mod, B, exec, $web_browser
-bind = $main_mod, space, exec, $launcher
-bind = ALT, space, exec, $launcher2
-
-# Screenshot binds
-bind = , print, exec, hyprshot -m output -m active
-bind = $main_mod, print, exec, hyprshot -m window
-bind = $main_mod SHIFT, print, exec, hyprshot -m window -m active
-bind = $main_mod CONTROL, print, exec, hyprshot -m region
-
-# Move focus with main_mod + arrow keys
-bind = $main_mod, H, movefocus, l
-bind = $main_mod, L, movefocus, r
-bind = $main_mod, K, movefocus, u
-bind = $main_mod, J, movefocus, d
-
-# Switch workspaces with main_mod + [0-9]
-bind = $main_mod, 1, workspace, 1
-bind = $main_mod, 2, workspace, 2
-bind = $main_mod, 3, workspace, 3
-bind = $main_mod, 4, workspace, 4
-bind = $main_mod, 5, workspace, 5
-bind = $main_mod, 6, workspace, 6
-bind = $main_mod, 7, workspace, 7
-bind = $main_mod, 8, workspace, 8
-bind = $main_mod, 9, workspace, 9
-bind = $main_mod, 0, workspace, 10
-
-# Move active window to a workspace with main_mod + SHIFT + [0-9]
-bind = $main_mod SHIFT, 1, movetoworkspace, 1
-bind = $main_mod SHIFT, 2, movetoworkspace, 2
-bind = $main_mod SHIFT, 3, movetoworkspace, 3
-bind = $main_mod SHIFT, 4, movetoworkspace, 4
-bind = $main_mod SHIFT, 5, movetoworkspace, 5
-bind = $main_mod SHIFT, 6, movetoworkspace, 6
-bind = $main_mod SHIFT, 7, movetoworkspace, 7
-bind = $main_mod SHIFT, 8, movetoworkspace, 8
-bind = $main_mod SHIFT, 9, movetoworkspace, 9
-bind = $main_mod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $main_mod, S, togglespecialworkspace, magic
-bind = $main_mod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with main_mod + scroll
-bind = $main_mod, mouse_down, workspace, e+1
-bind = $main_mod, mouse_up, workspace, e-1
-
-# Move/resize windows with main_mod + LMB/RMB and dragging
-bindm = $main_mod, mouse:272, movewindow
-bindm = $main_mod, mouse:273, resizewindow
-
-# Volume keys
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 1%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 1%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 1%-
-
-bindl = CONTROL, KP_Divide, exec, $HOME/scripts/audio/toggle-mic-with-notification
-
-# Media keys
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-
+source = ~/.config/hypr/binds.conf
 
 ###############
 ### WINDOWS ###
