Extracted window and workspace rules to their own files

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -223,44 +223,10 @@ source = ~/.config/hypr/binds.conf
 ### WINDOWS ###
 ###############
 
-# https://wiki.hypr.land/Configuring/Window-Rules/
-# https://wiki.hypr.land/Configuring/Workspace-Rules/
-
-# Ignore maximize requests from apps
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
-
-# Float popup Steam windows
-windowrule = float, class:steam, title:negative:Steam
-
-# Fix Zen PiP
-windowrule = float, pin, size 854 480, class:zen, title:Picture-in-Picture
-
-# Float Pavucontrol
-windowrule = float, size 500 400, class:org.pulseaudio.pavucontrol
-
-# Tile main Godot Engine windows
-windowrule = tile, initialClass:Godot, initialTitle:Godot
-
-# Float Thunar file operation window
-windowrule = float, class:thunar, title:File Operation Window
-
-windowrule = float, noblur, class:cz.upce.fei.App.App
+source = ~/.config/hypr/window-rules.conf
 
 ##################
 ### WORKSPACES ###
 ##################
 
-workspace = 1, monitor:$monitor1
-workspace = 2, monitor:$monitor1
-workspace = 3, monitor:$monitor1
-workspace = 4, monitor:$monitor1
-workspace = 5, monitor:$monitor1
-
-workspace = 6, monitor:$monitor2
-workspace = 7, monitor:$monitor2
-workspace = 8, monitor:$monitor2
-workspace = 9, monitor:$monitor2
-workspace = 10, monitor:$monitor2
+source = ~/.config/hyper/workspace-rules.conf
