Changed some hyprland stuff

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor = $monitor2, 1920x1080, 1920x0, 1
 ###################
 
 $terminal = kitty
-$file_manager = thunar
+$file_manager = nemo
 $web_browser = zen-browser
 
 $launcher = pkill fuzzel || fuzzel
@@ -39,7 +39,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-env = XDG_DATA_DIRS,/usr/local/share:/usr/share:/var/lib/flatpak/exports/share/applications
+env = XDG_DATA_DIRS,/usr/local/share:/usr/share:/home/plskyuwu/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share
 
 ###################
 ### PERMISSIONS ###
@@ -229,4 +229,4 @@ source = ~/.config/hypr/window-rules.conf
 ### WORKSPACES ###
 ##################
 
-source = ~/.config/hyper/workspace-rules.conf
+source = ~/.config/hypr/workspace-rules.conf
