--- a/hyprland/.config/hypr/window-rules.conf
+++ b/hyprland/.config/hypr/window-rules.conf
@@ -28,3 +28,6 @@ windowrule = float, class:thunar, title:File Operation Window
 
 # Fix my javafx app
 windowrule = float, noblur, class:cz.upce.fei.App.App
+
+# Float xdg-desktop-portal
+windowrule = float, class:xdg-desktop-portal.*
