--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -41,6 +41,10 @@ env = HYPRCURSOR_SIZE,24
 
 env = XDG_DATA_DIRS,/usr/local/share:/usr/share:/home/plskyuwu/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share
 
+env = QT_QPA_PLATFORMTHEME,qt6ct
+exec-once = dbus-update-activation-environment --systemd --all
+exec-once = systemctl --user import-environment QT_QPA_PLATFORMTHEME
+
 ###################
 ### PERMISSIONS ###
 ###################
