--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -7,6 +7,7 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "icon_theme": "Catppuccin Mocha",
   "minimap": {
     "show": "auto"
   },
@@ -24,5 +25,6 @@
     "mode": "system",
     "light": "One Light",
     "dark": "Catppuccin Mocha"
-  }
+  },
+  "autosave": { "after_delay": { "milliseconds": 500 } }
 }
