Changed waybar config

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,6 +1,6 @@
 // -*- mode: jsonc -*-
 {
-    "layer": "top",
+    //"layer": "top",
     "position": "top",
     "height": 20,
     "spacing": 10,
