Extracted hyprland monitors into a separate file, added hyprlock and some other changes

--- a/hyprland/.config/hypr/binds.conf
+++ b/hyprland/.config/hypr/binds.conf
@@ -8,13 +8,14 @@
 $main_mod = SUPER
 
 # Window binds
-bind = $main_mod, Q, killactive,
-bind = $main_mod SHIFT CONTROL ALT, escape, exit,
-bind = $main_mod, V, togglefloating,
-bind = $main_mod, P, pseudo, # dwindle
-bind = $main_mod, T, togglesplit, # dwindle
+bind = $main_mod, Q, killactive
+bind = $main_mod SHIFT CONTROL ALT, escape, exit
+bind = $main_mod, V, togglefloating
+bind = $main_mod, P, pseudo # dwindle
+bind = $main_mod, T, togglesplit # dwindle
 bind = $main_mod, F, fullscreen
-bind = $main_mod SHIFT, V, pin,
+bind = $main_mod SHIFT, V, pin
+bind = $main_mod SHIFT, L, exec, $lockscreen
 
 # Waybar restart
 bind = $main_mod SHIFT CONTROL ALT, R, exec, killall -SIGUSR2 waybar
