--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -4,11 +4,7 @@ source = ~/.config/hypr/colors.conf
 ### MONITORS ###
 ################
 
-$monitor1 = DP-1
-$monitor2 = DVI-D-1
-
-monitor = $monitor1, 1920x1080@71, 0x0, 1
-monitor = $monitor2, 1920x1080, 1920x0, 1
+source = ~/.config/hypr/monitors.conf
 
 ###################
 ### MY PROGRAMS ###
@@ -18,16 +14,22 @@ $terminal = kitty
 $file_manager = nemo
 $web_browser = zen-browser
 
+$editor_gui = zeditor
+$editor_tui = nvim
+
 $launcher = pkill fuzzel || fuzzel
 $launcher2 = pkill wofi || wofi --allow-images --show drun
+
+$lockscreen = hyprlock
 
 #################
 ### AUTOSTART ###
 #################
 
+exec-once = darkman run
+exec-once = udiskie
 exec-once = waybar
 exec-once = hyprpaper
-exec-once = udiskie
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 #############################
@@ -39,7 +41,8 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-env = XDG_DATA_DIRS,/usr/local/share:/usr/share:/home/plskyuwu/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share
+env = XDG_DATA_DIRS,/usr/local/share:/usr/share:$HOME/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share
+env = HYPRSHOT_DIR,$HOME/Pictures/Screenshots
 
 env = QT_QPA_PLATFORMTHEME,qt6ct
 exec-once = dbus-update-activation-environment --systemd --all
@@ -178,6 +181,7 @@ master {
 misc {
     force_default_wallpaper = 0
     disable_hyprland_logo = true
+    middle_click_paste = false
 }
 
 
