Changed where wallpapers are stored

--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/wallpapers/lucy-cropped.jpg
-wallpaper = , ~/Pictures/wallpapers/lucy-cropped.jpg
+preload = ~/.config/hypr/wallpapers/lucy-cropped.jpg
+wallpaper = , ~/.config/hypr/wallpapers/lucy-cropped.jpg
