Changed where wallpapers are stored

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -47,6 +47,6 @@ input-field {
 
 background {
     monitor =
-    path = ~/Pictures/wallpapers/lucy-cropped.jpg
+    path = ~/.config/hypr/wallpapers/lucy-cropped.jpg
     blur_passes = 2
 }
