--- a/hyprland/.config/hypr/binds.conf
+++ b/hyprland/.config/hypr/binds.conf
@@ -30,8 +30,8 @@ bind = ALT, space, exec, $launcher2
 # Screenshot binds
 bind = , print, exec, hyprshot -m output -m active
 bind = $main_mod, print, exec, hyprshot -m window
-bind = $main_mod SHIFT, print, exec, hyprshot -m window -m active
-bind = $main_mod CONTROL, print, exec, hyprshot -m region
+bind = $main_mod CONTROL, print, exec, hyprshot -m window -m active
+bind = $main_mod SHIFT, print, exec, hyprshot -m region
 
 # Move focus with main_mod + arrow keys
 bind = $main_mod, H, movefocus, l
