--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -17,7 +17,7 @@
   "ui_font_family": "JetBrainsMono Nerd Font",
   "buffer_font_family": "JetBrainsMono Nerd Font",
   "vim_mode": true,
-  "relative_line_numbers": true,
+  "relative_line_numbers": "enabled",
   "base_keymap": "JetBrains",
   "ui_font_size": 16.0,
   "buffer_font_size": 16,
@@ -26,5 +26,7 @@
     "light": "One Light",
     "dark": "Catppuccin Mocha"
   },
+  "show_wrap_guides": true, // Show/hide wrap guides (vertical rulers)
+  "wrap_guides": [80, 100, 120], // Where to position wrap_guides (character counts)
   "autosave": { "after_delay": { "milliseconds": 500 } }
 }
