--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -23,6 +23,7 @@ placement_strategy center
 hide_window_decorations no
 confirm_os_window_close 0
 background_opacity 0.5
+background_blur 1
 
 # Bell
 enable_audio_bell no
