--- a/paru/.config/paru/paru.conf
+++ b/paru/.config/paru/paru.conf
@@ -15,7 +15,7 @@ Provides
 DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg -fossil
 SkipReview
 #AurOnly
-#BottomUp
+BottomUp
 #RemoveMake
 #SudoLoop
 #UseAsk
